...
            android:imeOptions="actionDone"
            android:inputType="numberPassword"
            android:maxLength="@{viewModel.isAdmin ? 5 : 3}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
          android:id="@+id/profile_reset_save_button"
          style="@style/StateButtonActive"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="@dimen/profile_reset_pin_activity_profile_reset_save_button_margin_end"
          android:layout_marginBottom="24dp"
...
